--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -105,6 +105,12 @@
       "rlig" 1,
       "calt" 1;
   }
+  h1 {
+    @apply text-3xl font-bold;
+  }
+  h2 {
+    @apply text-2xl font-semibold;
+  }
 }
 
 @layer utilities {
